#scrapper :: java record introduced, HtmlProvider build urls now